# study-language

./: .gitignore  README.md
CPP/: .gitignore
CPP/HelloCpp/: CMakeLists.txt  README.md  main.cpp
CPP/HelloCpp2/: README.md
CPP/RhinoCppTest/: README.md  Resource.h  RhinoCppTest.def  RhinoCppTest.rc  RhinoCppTest.sln  RhinoCppTest.vcxproj  RhinoCppTest.vcxproj.filters  RhinoCppTestApp.cpp  RhinoCppTestApp.h  RhinoCppTestPlugIn.cpp  RhinoCppTestPlugIn.h  cmdRhinoCppTest.cpp  stdafx.cpp
CS/BlazorTodoList/: Program.cs  README.md  Startup.cs  TodoItem.cs  _Imports.razor
CS/LINQCheetSheet/: Check.cs  Connect.cs  Foundation.cs  Generate.cs  Instantiate.cs  Math.cs  Program.cs  README.md
CS/MathDotNetNumerics/: README.md
CS/PostMultiForm/: PostMultiForm.csproj  Program.cs  README.md
CS/Rhino/: AddBrep_with_Attiributes.cs  AddLayer.cs
CS/Rug.Osc/: Program.cs  README.md  UdpClient.csproj  UdpClient.sln
CS/SystemNet/: Program.cs  README.md
CS/TestMathDotNetNumerics/: Program.cs
JS/: .gitignore
JS/REACT_NEXT_Nyumonn/: README.md
JS/Tutorial-threejs/: README.md
JS/ifcjs-hello-world/: README.md  bundle.js  index.html  package-lock.json  package.json  rollup.config.js
JS/nextjs-blog/: README.md  package-lock.json
JS/rechart/: README.md  package-lock.json  package.json
JS/threejs-officialdoc/: .gitignore  README.md
JS/webpack/: README.md  app.js  bundle.js  index.html  package-lock.json  sample1.js  sample2.js  webpack.config.js
JS/webpack-threejs/: README.md  package-lock.json  package.json  webpack.config.js
Python/: .gitignore
Python/Perfect-Python/: README.md
Python/archicad-rhinoinside/: README.md  main.py  model.3dm
Python/ghhops-cpython/: README.md  app.py  (+1 more)
Rust/: .gitignore
Rust/hello-actix/: Cargo.toml  README.md  todo.db
Rust/hello-actix/src/: main.rs
Rust/hello-actix/templates/: index.html
Rust/ms-rust/chapter8/rusty-journal/: Cargo.toml
Rust/ms-rust/chapter8/rusty-journal/src/: cli.rs  main.rs  tasks.rs
(+350 files in other folders)
