[package]
name = "hello-actix"
version = "0.1.0"
authors = ["hrntsm <contact@hrntsm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.0-beta.2"
actix-web = "4.0.0-beta.3"
actix-rt = "2.0.2"
thiserror = "1.0.25"
askama = "0.10.5"
